# rag_chatbot

./: .gitignore  README.md  app.py  pyproject.toml  sync_langfuse.py
data/: golden_dataset.json
src/rag_chatbot/: __init__.py  config.py  evaluate.py  ingest.py  prompt.yaml  rag_chain.py  retriever.py  telemetry_logger.py
utils/: __init__.py  langfuse_sync.py
